[fix] Fixed menu align error

--- a/src/styles/_design-tokens.scss
+++ b/src/styles/_design-tokens.scss
@@ -57,6 +57,9 @@ $z-index-header: 1000;
 
 // ===== 间距系统 =====
 $spacing-zero: 0px;
+$spacing-one: 1px;
+$spacing-tow: 2px;
+$spacing-three: 3px;
 $spacing-ss: 6px;
 $spacing-sm: 8px;
 $spacing-md: 12px;
